Update variable names and add click listeners in ContainerActivity and QRScannerFragment

--- a/QRganize-android/app/src/main/res/layout/item_layout.xml
+++ b/QRganize-android/app/src/main/res/layout/item_layout.xml
@@ -1,9 +1,44 @@
 <!-- item_layout.xml -->
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/itemTextView"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/frame"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
-    android:textSize="18sp"
-    android:textColor="@android:color/black"
-    android:background="?android:attr/selectableItemBackground"/>
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+        <TextView
+            android:id="@+id/id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:textSize="18sp"
+            android:textColor="@android:color/black"
+            android:background="?android:attr/selectableItemBackground"/>
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/id"
+            android:padding="10dp"
+            android:textSize="12sp"
+            android:textColor="@android:color/black"
+            android:background="?android:attr/selectableItemBackground"/>
+        <TextView
+            android:id="@+id/owner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/name"
+            android:padding="10dp"
+            android:textSize="12sp"
+            android:textColor="@android:color/black"
+            android:background="?android:attr/selectableItemBackground"/>
+        <com.google.android.material.divider.MaterialDivider
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:layout_below="@id/owner"/>
+    </RelativeLayout>
+</FrameLayout>
