--- a/QRganize-android/app/src/main/res/layout/label_textview_pair.xml
+++ b/QRganize-android/app/src/main/res/layout/label_textview_pair.xml
@@ -5,23 +5,21 @@
     android:weightSum="10">
 
     <TextView
-        android:id="@+id/id_label"
+        android:id="@+id/label"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="3"
         android:padding="12dp"
-        android:text="ID"
         android:textSize="18sp"
-        android:textColor="@android:color/black"
-        android:background="?android:attr/selectableItemBackground"/>
+        android:textStyle="bold"
+        android:textColor="@android:color/black"/>
 
     <TextView
-        android:id="@+id/id"
+        android:id="@+id/textview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="7"
         android:padding="12dp"
         android:textSize="18sp"
-        android:textColor="@android:color/black"
-        android:background="?android:attr/selectableItemBackground"/>
+        android:textColor="@android:color/black"/>
 </LinearLayout>
