--- a/QRganize-android/app/src/main/res/layout/activity_container.xml
+++ b/QRganize-android/app/src/main/res/layout/activity_container.xml
@@ -46,7 +46,7 @@
         android:layout_above="@+id/button"/>
     <Button
         android:id="@+id/button"
-        android:text="Click"
+        android:text="Click to generate QR code"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
