--- a/QRganize-android/app/src/main/res/layout/activity_main.xml
+++ b/QRganize-android/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/tabLayout" />
 
 </RelativeLayout>
