--- a/QRganize-android/app/src/main/res/layout/activity_main.xml
+++ b/QRganize-android/app/src/main/res/layout/activity_main.xml
@@ -3,11 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/loginButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Login"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true" />
+
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/loginButton"
         android:minHeight="?attr/actionBarSize" />
 
     <androidx.viewpager.widget.ViewPager
