--- a/QRganize-android/app/src/main/res/layout/fragment_barcode_scanner.xml
+++ b/QRganize-android/app/src/main/res/layout/fragment_barcode_scanner.xml
@@ -4,20 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
-    tools:context=".tabs.BarcodeScannerActivity">
+    tools:context=".tabs.BarcodeScannerFragment">
 
     <FrameLayout
         android:id="@+id/frame"
-        android:layout_width="215dp"
-        android:layout_height="215dp"
-        android:layout_marginTop="150dp"
+        android:layout_width="275dp"
+        android:layout_height="135dp"
+        android:layout_marginTop="200dp"
         android:layout_centerHorizontal="true"
         android:background="@drawable/border">
 
         <androidx.camera.view.PreviewView
             android:id="@+id/previewView"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="260dp"
+            android:layout_height="120dp"
             android:layout_gravity="center"/>
     </FrameLayout>
 
