--- a/QRganize-android/app/src/main/res/layout/item_layout.xml
+++ b/QRganize-android/app/src/main/res/layout/item_layout.xml
@@ -1,4 +1,3 @@
-<!-- item_layout.xml -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/frame"
@@ -8,21 +7,49 @@
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
     android:background="@color/white">
+
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingEnd="15dp"
+            android:paddingStart="15dp">
+
+                <!-- Image on the left -->
+                <ImageView
+                    android:id="@+id/image"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true" />
+
+                <!-- First include layout to the right of the ImageView -->
                 <include
                     android:id="@+id/id"
-                    layout="@layout/label_textview_pair" />
+                    layout="@layout/label_textview_pair"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@+id/image"
+                    android:layout_alignTop="@+id/image"
+                    android:layout_marginStart="10dp"
+                    android:layout_alignParentEnd="true" />
+
+                <!-- Second include layout below the first one -->
                 <include
                     android:id="@+id/name"
                     layout="@layout/label_textview_pair"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_below="@id/id"
+                    android:layout_toEndOf="@+id/image"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_alignParentEnd="true" />
+
+                <!-- Divider line below the name -->
+                <com.google.android.material.divider.MaterialDivider
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-        <com.google.android.material.divider.MaterialDivider
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:layout_below="@id/name"/>
+                    android:layout_height="3dp"
+                    android:layout_below="@id/name"
+                    android:layout_marginTop="10dp" />
         </RelativeLayout>
 </FrameLayout>
